# RAG_for_beginners

./: .gitignore  README.md  agentic_chunking.py  answer_generation.py  chunks_export.json  history_aware_generation.py  ingestion_pipeline.py  pyproject.toml  rag_results.json  recursive_character_text_splitter.py  requirement.txt  retrieval_pipeline.py  semantic_chunking.py
db/chroma_db/4fbaa3f2-901d-4440-9e30-130b48842a18/: index_metadata.pickle
